@@ -1,3 +1,12 @@
+Next release
+
+  Features
+
+    Optimization: always choose n-best field index sort at very small limit 
+    sizes.
+
+    Better tests (no force).
+
 0.5.1 (12/31/2008)
 
   Features
